# pwsafe

./: Cargo.toml  Readme.md
src/: communicator.rs  diff.rs  main.rs  matrix.rs  pwsafe.rs  server.rs  store.rs
src/cmd/: create.rs  invite.rs  join.rs  sync.rs
tests/: Cargo.toml  pwsafe.psafe3  test-configuration-dummy.yaml
tests/local/: kube.yml
tests/local/data/: homeserver.yaml  synapse.hardmo.de.signing.key
tests/local/pg-initdb/: init-user-db.sh
tests/prepare-api/: Cargo.toml
tests/prepare-api/src/: main.rs
tests/pwsafe-dump/: Cargo.toml
tests/pwsafe-dump/src/: main.rs
tests/pwsafe-matrix-create/: Cargo.toml
tests/pwsafe-matrix-create/src/: main.rs
tests/pwsafe-matrix-invite/: Cargo.toml
tests/pwsafe-matrix-invite/src/: main.rs
tests/pwsafe-matrix-join/: Cargo.toml
tests/pwsafe-matrix-join/src/: main.rs
tests/pwsafe-matrix-sync/: Cargo.toml
tests/pwsafe-matrix-sync/src/: main.rs
tests/run/: Cargo.toml
tests/run/src/: harness.rs  lib.rs
