[package]
name = "pwsafe-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.11"
matrix-sdk = "0.6.2"
passterm = "2"
pwsafer = { path = "third-party/pwsafer" } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.9.2"
uapi = "0.2.10"
url = "2"
uuid = "1.6"
tempfile = "3"

[dependencies.axum]
version = "0.7.3"

[dependencies.tokio]
version = "1.35"
features = ["process", "rt-multi-thread", "signal"]

[dependencies.clap]
version = "4"
features = ["derive"]
