[package]
name = "pwsafe-matrix-test-join"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "pwsafe-matrix-test-join"
path = "src/main.rs"

[dependencies]
anyhow = "1"
url = { version = "2", features = ["serde"] }
serde_yaml = "0.9.29"
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.pwsafe-matrix]
artifact = ["bin:pwsafe-matrix"]
path = "../../bin/pwsafe-matrix"
