[package]
name = "run"
version = "0.0.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
fastrand = "2"
ureq = "2.8"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.2"
tempfile = "3.8"

[dependencies.pwsafe-matrix-prepare-api]
artifact = ["bin:pwsafe-matrix-prepare-api"]
path = "../prepare-api"

[dependencies.pwsafe-matrix-prepare-pwsafe]
artifact = ["bin:pwsafe-matrix-prepare-pwsafe"]
path = "../prepare-pwsafe"
